--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "deploy": "aws s3 sync ./dist s3://games.grekz.com --delete --cache-control \"max-age=3153600\""
   },
   "dependencies": {
     "@astrojs/solid-js": "^2.1.1",
